@@ -1,3 +1,5 @@
+2006/6/4 -- released version 20060604_trunk
+
 2006/6/3 -- released version 20060603_trunk
 
 2006/6/2 -- released version 20060602_trunk
